notes
seperate build frame, 
  failes to compile

INFO ESPHome 2025.7.5
INFO Reading configuration c:\esphomechlorinenew\cc1101iris.yaml...
INFO Generating C++ source...
INFO Compiling app...
Processing cc1101iris (board: esp32-c3-devkitm-1; framework: espidf; platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip)
--------------------------------------------------------------------------------
HARDWARE: ESP32C3 160MHz, 320KB RAM, 4MB Flash
 - framework-espidf @ 3.50302.0 (5.3.2) 
 - tool-cmake @ 3.30.2 
 - tool-esptoolpy @ 4.8.6 
 - tool-mklittlefs @ 3.2.0 
 - tool-ninja @ 1.9.0 
 - tool-riscv32-esp-elf-gdb @ 14.2.0+20240403 
 - tool-xtensa-esp-elf-gdb @ 14.2.0+20240403 
 - toolchain-esp32ulp @ 2.35.0-20220830 
 - toolchain-riscv32-esp @ 13.2.0+20240530
Reading CMake configuration...
Dependency Graph
|-- noise-c @ 0.1.10
|-- ArduinoJson @ 7.4.2
Compiling .pioenvs\cc1101iris\src\esphome\components\iris\iris.cpp.o
Compiling .pioenvs\cc1101iris\src\main.cpp.o
src/esphome/components/iris/iris.cpp: In member function 'void esphome::iris::IrisComponent::send_command(esphome::iris::IrisCommand, esphome::iris::IrisMode)':
src/esphome/components/iris/iris.cpp:107:22: error: no matching function for call to 'esphome::remote_base::RemoteTransmitData::item(int&)'
  107 |             dst->item(pulse);
      |             ~~~~~~~~~^~~~~~~
In file included from src/esphome/components/remote_transmitter/remote_transmitter.h:3,
                 from src/esphome/components/iris/iris.h:4,
                 from src/esphome/components/iris/iris.cpp:4:
src/esphome/components/remote_base/remote_base.h:25:8: note: candidate: 'void esphome::remote_base::RemoteTransmitData::item(uint32_t, uint32_t)'
   25 |   void item(uint32_t mark, uint32_t space) {
      |        ^~~~
src/esphome/components/remote_base/remote_base.h:25:8: note:   candidate expects 2 arguments, 1 provided
*** [.pioenvs\cc1101iris\src\esphome\components\iris\iris.cpp.o] Error 1
========================= [FAILED] Took 10.18 seconds =========================
